--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter",
+  "name": "gromov.digital",
   "version": "1.0.0",
   "private": true,
-  "description": "gatsby-starter",
+  "description": "gromov.digital",
   "author": "iliagromov",
   "keywords": [
     "gatsby"
@@ -16,28 +16,30 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@mdx-js/react": "^2.3.0",
-    "classnames": "^2.3.2",
-    "gatsby": "^5.12.4",
-    "gatsby-plugin-dark-mode": "^1.1.2",
-    "gatsby-plugin-image": "^3.12.0",
-    "gatsby-plugin-manifest": "^5.12.0",
-    "gatsby-plugin-mdx": "^5.12.0",
-    "gatsby-plugin-react-helmet": "^6.12.0",
-    "gatsby-plugin-sass": "^6.12.0",
-    "gatsby-plugin-sharp": "^5.12.0",
-    "gatsby-source-filesystem": "^5.12.0",
-    "gatsby-transformer-sharp": "^5.12.0",
+    "@mdx-js/react": "^3.0.1",
+    "classnames": "^2.5.1",
+    "gatsby": "^5.13.3",
+    "gatsby-adapter-netlify": "^1.1.3",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-mdx": "^5.13.1",
+    "gatsby-plugin-sass": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-plugin-yandex-metrika": "^2.5.0",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-remark": "^6.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "sass": "^1.68.0"
+    "sass": "^1.71.1"
   },
   "devDependencies": {
-    "@types/node": "^20.3.3",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "smart-grid": "^2.1.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.3.3"
   }
 }
