--- a/package.json
+++ b/package.json
@@ -33,13 +33,23 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-svg": "^16.1.33",
     "sass": "^1.71.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-proposal-decorators": "^7.23.9",
+    "@types/classnames": "^2.3.1",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "babel-loader": "^9.1.3",
+    "babel-preset-gatsby": "^3.13.1",
     "smart-grid": "^2.1.2",
     "typescript": "^5.3.3"
-  }
+  },
+  "browserslist": [
+    ">0.25%",
+    "not dead and supports es6-module"
+  ]
 }
